# SlideMaker

./: README.md
1.3.PptxFromParser2/: VariantWrapper.hpp  definitions.hpp  main.cpp
1.Parser/: CommandValidator.hpp  InputHandler.cpp  InputHandler.hpp  Printer.hpp  ResultComputer.hpp  a.out  main.cpp  parser.cpp  whatDoesItDo.txt
2.ParserToPptx/: AddCommandExecutor.cpp  ChangeCommandExecutor.cpp  ChangeCommandExecutor.hpp  CommandExecutor.hpp  CommandExecutorFactory.cpp  CommandExecutorFactory.hpp  CommandRegistry.cpp  CommandRegistry.hpp  CommandValidator.cpp  CommandValidator.hpp  Controller.cpp  Controller.hpp  DisplayCommandExecutor.cpp  DisplayCommandExecutor.hpp  Document.cpp  Document.hpp  Ellipse.hpp  Line.cpp  (+34 more)
Parser9/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
Parser9/CLI/: CommandFactory.cpp  CommandFactory.hpp  CommandHistory.cpp  CommandHistory.hpp  CommandRegistry.cpp  CommandRegistry.hpp  Controller.cpp  Controller.hpp
Parser9/CLI/Commands/: AddCommand.cpp  AddCommand.hpp  ChangeCommand.cpp  ChangeCommand.hpp  Command.hpp  DisplayCommand.cpp  DisplayCommand.hpp  DrawCommand.cpp  DrawCommand.hpp  ExitCommand.cpp  ExitCommand.hpp  ListCommand.cpp  ListCommand.hpp  LoadCommand.cpp  LoadCommand.hpp  MoveCommand.cpp  MoveCommand.hpp  RedoCommand.cpp  RedoCommand.hpp  RemoveCommand.cpp  RemoveCommand.hpp  SaveCommand.cpp  SaveCommand.hpp  SwitchCommand.cpp  SwitchCommand.hpp  UndoCommand.cpp  UndoCommand.hpp
Parser9/CLI/Parser9/: Parser9.cpp  Parser9.hpp  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  SyntaxAnalyzer.cpp  SyntaxAnalyzer.hpp  Tokenizer.cpp  Tokenizer.hpp
Parser9/Data/: Attributes.cpp  Attributes.hpp  Document.cpp  Document.hpp  FormatSize.cpp  FormatSize.hpp  IItem.hpp  IItemVisitor.hpp  Item.cpp  Item.hpp  ItemGroup.cpp  ItemGroup.hpp  Slide.cpp  Slide.hpp
Parser9/Director/: Director.cpp  Director.hpp
Parser9/Director/Actions/: AddItemAction.cpp  AddItemAction.hpp  AddSlideAction.cpp  AddSlideAction.hpp  ChangeItemAction.cpp  ChangeItemAction.hpp  IAction.hpp  MoveSlideAction.cpp  MoveSlideAction.hpp  RemoveItemAction.cpp  RemoveItemAction.hpp  RemoveSlideAction.cpp  RemoveSlideAction.hpp
Parser9/Rendering/: DimensionConverter.cpp  DimensionConverter.hpp  IShape.hpp  ITextDisplayable.hpp  IVisualDisplayable.hpp  Renderer.cpp  Renderer.hpp  ShapeLibrary.cpp  ShapeLibrary.hpp
Parser9/Rendering/Shapes/: EllipseShape.cpp  EllipseShape.hpp  LineShape.cpp  LineShape.hpp  PolygonShape.cpp  PolygonShape.hpp  RectangleShape.cpp  RectangleShape.hpp  ShapeBase.cpp  ShapeBase.hpp  TextShape.cpp  TextShape.hpp  TrapezoidShape.cpp  TrapezoidShape.hpp  TriangleShape.cpp  TriangleShape.hpp  VisualShapeBase.cpp  VisualShapeBase.hpp
Parser9/Serialization/: IDeserializer.hpp  ISerializer.hpp  JSONDocument.cpp  JSONDocument.hpp  JsonDeserializer.cpp  JsonDeserializer.hpp  JsonSerializer.cpp  JsonSerializer.hpp
Parser9/zhelpers/: Definitions.cpp  Definitions.hpp  VariantWrapper.hpp
Parser9/zzdrafts/: a.out  exception_ternary.cpp  map_test.cpp  sameType.cpp
SlideMaker/: Application.hpp  CMakeLists.txt  Definitions.hpp  VariantWrapper.hpp  definitions.cpp  main.cpp
SlideMaker/CLI/: CLIController.cpp  CLIController.hpp  CommandFactory.hpp  CommandHistory.cpp  CommandHistory.hpp
SlideMaker/CLI/Commands/: MoveCommand.cpp  MoveCommand.hpp  UndoCommand.hpp
SlideMaker/CLI/Parser8/: CommandRegistry.cpp  Parser8.hpp  SemanticAnalyzer.hpp  Tokenizer.cpp  Tokenizer.hpp
SlideMaker/Data/: FormatSize.hpp  Item.cpp  Item.hpp  ItemGroup.hpp
SlideMaker/Director/: Director.hpp
SlideMaker/Director/Actions/: AddSlideAction.cpp  ChangeItemAction.hpp  MoveSlideAction.cpp  MoveSlideAction.hpp  RemoveItemAction.cpp  RemoveSlideAction.hpp
SlideMaker/Rendering/: DimensionConverter.hpp  EllipseShape.hpp  IVisualDisplayable.hpp  PolygonShape.hpp  RectangleShape.hpp  Renderer.cpp  ShapeLibrary.cpp  ShapeLibrary.hpp  TriangleShape.hpp
SlideMaker/Serializing/: JsonDeserializer.cpp  JsonSerializer.cpp
SlideMaker/zdrafts/: GroupShape.hpp  ItemBase.cpp  ItemBase.hpp  finalKeywordTest.cpp  streamTest.cpp
(+505 files in other folders)
